# Simple-music-player

./: .gitignore  CMakeLists.txt  README.md
data/ui/: music.glade  music.glade~
src/: main.c  main_window.c  main_window.h  playback.c  playback.h
